--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -43,9 +43,7 @@
    - 如果之前<0，则对当前有害  重置为当前值
 2. 更新当前的最大值  
 
-### 6. 无重复字符的最长子串
 
-思路：滑动窗口用set，记录窗口内每个字符是否出现
 
 ### ⭐️7. 三数之和
 
@@ -380,6 +378,89 @@ def largestRectangleArea(heights):
         stack.append(i)  # 当前柱子索引入栈
     return max_area
 ```
+
+
+
+## 滑动窗口（左闭右开）
+
+### 1. 无重复字符的最长子串
+
+题目描述:  找出其中不含有重复字符的最长子串的长度。输入s = "abcabcbb"  输出: 3,即"abc" 
+
+思路：滑动窗口用set  添加add  移除remove，记录窗口内每个字符是否出现
+
+```python
+# 动态窗口
+# 1. 什么时候扩大窗口？ 每步都在扩大
+# 2. 什么时候收缩窗口？ 窗口内都是不重复元素，如果当前右侧元素在窗口内出现重复值，一直收缩左侧元素直到窗口内不重复
+# 3. 什么时候更新结果？ 收缩完记录结果
+
+# 窗口参数
+window = set()  # 用于记录当前窗口的字符
+left, right = 0, 0  # 窗口为左闭右开 [left, right)
+max_length = 0  # 记录最大长度
+while right < len(s):  # 右边界移动范围是 0 到 n-1
+    char = s[right]
+    # 如果当前字符在窗口中，则收缩左边界  动态窗口
+    while char in window:
+        window.remove(s[left])
+        left += 1
+    # 将当前字符加入窗口
+    window.add(char)
+    # 更新最大长度
+    max_length = max(max_length, right - left + 1)
+    # 扩大右边界
+    right += 1
+return max_length
+```
+
+### 2. 最小覆盖子串
+
+思路：统计频率，窗口用Counter
+
+```python
+def minWindow(self, s: str, t: str) -> str:
+    
+    # 窗口参数
+    window = {} 
+   	valid=0 # 单字符满足频次时+1
+  	left，right, = 0,0 # 左闭右开[left,right)  区间[0, 0)中没有元素，避免边界问题  窗口长度=right-left
+    
+    # 子串参数   
+    from collections import Counter
+    need=Counter(t) # "eex" --> Counter({'e': 2, 'x': 1})
+
+    # 记录结果
+    strat=0
+    length=float("inf")
+   
+    while right<len(s):  # right值尚未加入窗口，取值范围是0~n-1 
+        # 1. 判断当前元素 
+        char=s[right] 
+        if char in need.keys():
+            window[char] = window.get(char, 0) + 1
+            if window[char] == need[char]:
+                 valid += 1 
+        right+=1
+        
+        # 3. 判断是否收缩窗口
+        while left<right and valid==len(need.keys()): 
+            # 4. 记录结果
+            if right-left<length:
+              	start=left
+                length=right-left
+            # 5. 判断当前左侧元素是否移出窗口
+            char = s[left]
+            if char in need.keys():
+              	if window[char] == need[char]:
+                    valid-=1
+                window[char]-=1
+            # 6. 收缩左边界
+            left+=1
+		return "" if length==float("inf") else s[start: start + length]
+```
+
+
 
 ## 二叉树
 
