--- a/解题方法论.md
+++ b/解题方法论.md
@@ -202,7 +202,6 @@ def merge_and_process(nums1, nums2):
     """
     i, j = 0, 0
     merged = []
-
     # 合并两个有序数组
     while i < len(nums1) and j < len(nums2):
         if nums1[i] < nums2[j]:
@@ -219,8 +218,6 @@ def merge_and_process(nums1, nums2):
     else:
         return (merged[n//2-1] + merged[n//2])/2 # 偶数长度
 ```
-
-
 
 ### 4. 滑动窗口（左闭右开）
 
@@ -246,78 +243,7 @@ def merge_and_process(nums1, nums2):
 
    （3）收缩两步骤  （a）记录结果（b）左边界元素是否更新窗口参数（valid、windows、left）
 
-```python
-# 最小覆盖子串  
-def minWindow(self, s: str, t: str) -> str:
-    
-    # 窗口参数
-    window = {} 
-   	valid=0 # 单字符满足频次时+1
-  	left，right, = 0,0 # 左闭右开[left,right)  区间[0, 0)中没有元素，避免边界问题  窗口长度=right-left
-    
-    # 子串参数   
-    from collections import Counter
-    need=Counter(t) # "eex" --> Counter({'e': 2, 'x': 1})
-
-    # 记录结果
-    strat=0
-    length=float("inf")
-   
-    while right<len(s):  # right值尚未加入窗口，取值范围是0~n-1 
-        # 1. 判断当前元素 
-        char=s[right] 
-        if char in need.keys():
-            window[char] = window.get(char, 0) + 1
-            if window[char] == need[char]:
-                 valid += 1 
-        right+=1
-        
-        # 3. 判断是否收缩窗口
-        while left<right and valid==len(need.keys()): 
-            # 4. 记录结果
-            if right-left<length:
-              	start=left
-                length=right-left
-            # 5. 判断当前左侧元素是否移出窗口
-            char = s[left]
-            if char in need.keys():
-              	if window[char] == need[char]:
-                    valid-=1
-                window[char]-=1
-            # 6. 收缩左边界
-            left+=1
-		return "" if length==float("inf") else s[start: start + length]
-```
-
 [links](https://labuladong.online/algo/essential-technique/sliding-window-framework/#%E6%BB%91%E5%8A%A8%E7%AA%97%E5%8F%A3%E6%A1%86%E6%9E%B6%E6%A6%82%E8%A7%88)
-
-```python
-无重复字符的最长子串: 找出其中不含有重复字符的最长子串的长度。  set  add  remove
-输入: s = "abcabcbb"  输出: 3,即"abc" 
-
-# 动态窗口
-# 1. 什么时候扩大窗口？ 每步都在扩大
-# 2. 什么时候收缩窗口？ 窗口内都是不重复元素，如果当前右侧元素在窗口内出现重复值，一直收缩左侧元素直到窗口内不重复
-# 3. 什么时候更新结果？ 收缩完记录结果
-
-# 窗口参数
-window = set()  # 用于记录当前窗口的字符
-left, right = 0, 0  # 窗口为左闭右开 [left, right)
-max_length = 0  # 记录最大长度
-while right < len(s):  # 右边界移动范围是 0 到 n-1
-    char = s[right]
-    # 如果当前字符在窗口中，则收缩左边界  动态窗口
-    while char in window:
-        window.remove(s[left])
-        left += 1
-    # 将当前字符加入窗口
-    window.add(char)
-    # 更新最大长度
-    max_length = max(max_length, right - left + 1)
-    # 扩大右边界
-    right += 1
-return max_length
-```
 
 ### 5. 单调栈
 
@@ -474,18 +400,18 @@ class Solution:
 ### 1. 回溯三步骤
 
 1. 确定传参
+   - 全局参数：path存放结果，result存放结果集
+   - 保存结果==必须复制==
+
 2. 确定终止条件 
 3. 单层逻辑   **明确 **横向for遍历什么、递归纵向遍历什么
 
-|      | 局部参数                           | 终止条件                                  | 横向                                                         | 纵向                                          |
-| ---- | ---------------------------------- | ----------------------------------------- | ------------------------------------------------------------ | --------------------------------------------- |
-| 子集 | startIndex                         | startIndex==len(s) <br />先保存结果再终止 | range(startIndex, len(nums))                                 | backtrack(nums,i+1)                           |
-| 组合 | startIndex                         | len(path)==len(nums)                      | range(startIndex,len(nums))                                  | backtrack(nums,i+1) <br />i重复取   i+1不重复 |
-| 分割 | startIndex切割线                   | startIndex==len(s)                        | range(startIndex, len(s)) <br />切出的子串`s[startIndex:i+1]` | backtrack(s,i+1)                              |
-| 排列 | used  <br />False未访问 True已访问 | len(path)==len(nums)                      | range(len(nums))   ==全遍历==                                | backtrack(nums,==used==)                      |
-
-- 全局参数：path存放结果，result存放结果集
--  保存结果==必须复制==
+|      | 局部参数                           | 终止条件                                  | 横向                                                         | 纵向                                               |
+| ---- | ---------------------------------- | ----------------------------------------- | ------------------------------------------------------------ | -------------------------------------------------- |
+| 子集 | startIndex                         | startIndex==len(s) <br />先保存结果再终止 | range(startIndex, len(nums))                                 | backtrack(nums,i+1)                                |
+| 组合 | startIndex                         | len(path)==len(nums)                      | range(startIndex,len(nums))                                  | backtrack(nums,i or i+1) <br />i重复取   i+1不重复 |
+| 分割 | startIndex                         | startIndex==len(s)                        | range(startIndex, len(s)) <br />切出的子串`s[startIndex:i+1]` | backtrack(s,i+1)                                   |
+| 排列 | used  <br />False未访问 True已访问 | len(path)==len(nums)                      | range(len(nums))   ==全遍历==                                | backtrack(nums,==used==)                           |
 
 ### 2. 应用
 
@@ -494,15 +420,15 @@ class Solution:
 ```python
 # leetcode78 返回所有可能的子集
 result，path = [],[] # 全局参数
+startIndex=0
 def backtracking(nums,startIndex):
     result.append(path.copy())  # 记录结果，前序位置每个节点的值都是一个子集
     if startIndex == len(nums):  # 终止条件
         return
-    for i in range(startIndex, len(nums)): 
+    for i in range(startIndex, len(nums)): # 横向
         path.append(nums[i])
-        backtracking(nums, i+1) # 递归 i控制纵向遍历位置。i+1不能重复取
+        backtracking(nums, i+1) 
         path.pop()
-startIndex=0
 backtracking(nums,startIndex)
 return result
 ```
@@ -512,16 +438,16 @@ return result
 ### （2）组合无序  
 
 ```python
-result，path = [],[] # 全局参数
-def backtracking(nums,startIndex):
-    if 终止条件:  # 长度 or 总和等于指定值
-        result.append(path.copy())  # 存放结果 !必须复制!
-        return 
-    for i in range(startIndex,len(nums)): # 横向遍历的起始位置
-        path.append(nums[i])
-        backtrack(nums,i)  #递归 i依赖于横向，控制纵向。i表示可重复,i+1不能重复取(画出N叉树就明白了)
-        path.pop()
+result，path = [],[] 
 startIndex=0 
+def backtracking(nums,startIndex):
+    if 终止条件:  
+        result.append(path.copy())  
+        return 
+    for i in range(startIndex,len(nums)): 
+        path.append(nums[i])
+        backtrack(nums,i) # 纵向 i依赖横向，控制纵向。i可重复,i+1不重复(画出N叉树就明白了)
+        path.pop()
 backtracking(nums,startIndex)
 return result 
 ```
@@ -534,7 +460,8 @@ return result
 
 ```python
 # leetcode46 全排列
-result,path,used=[],[],[False]*len(nums)  # 全局参数
+result,path,=[],[] # 全局参数
+used=[False]*len(nums)
 def backtrack(nums,used):
     # 终止条件
     if len(path)==len(nums):
@@ -550,9 +477,7 @@ def backtrack(nums,used):
             backtrack(nums,used) # 纵向每次遍历整个数组，带着used
             path.pop()
             used[i]=False
-
 backtrack(nums,used) 
-return result
 ```
 
 ## 贪心
@@ -583,7 +508,7 @@ return result
 1. 背包容量从==0==开始
 2. 明确3个问题   01背包or完全背包（确定正序or逆序）、组合or排列（确定顺序）、具体问题
 
-![image-20250101212751345](assets/image-20250101212751345.png)
+![image-20250105下午73957568](./assets/image-20250105下午73957568.png)
 
 ### 3. 子序列问题
 
