--- a/解题方法论.md
+++ b/解题方法论.md
@@ -4,7 +4,7 @@
 
 ### 1. 前缀和、区间和
 
-​	前缀和：==明确定义==，即是否包含当前元素、遍历的范围
+​	前缀和：==明确定义==是否包含当前元素、遍历的范围
 
 ### 2. 查找算法
 
@@ -35,7 +35,7 @@ def binary_search(nums, target):
 - 题目1：找左右边界
 - 题目2：一个数字在升序数组中出现的次数     思路：右边界-左边界+1
 
-==借助变量== 持续更新结果
+==借助变量==  持续更新结果
 
 ```python
 def search(nums, target) -> int:
@@ -72,10 +72,10 @@ def search(nums, target) -> int:
 
 [4, 5, 6, 7, 0, 1, 2] 无重复元素
 
-|            | 比较      | 思路                                                 |
-| ---------- | --------- | ---------------------------------------------------- |
-| 查找目标值 | left  mid | 先判断左右区间有序，再判断目标值位于哪个区间         |
-| 查找最小值 | mid right | 旋转点一定在无序区间内，用变量min_value持续更新mid值 |
+|            | mid比较对象 | 思路                                                 |
+| ---------- | ----------- | ---------------------------------------------------- |
+| 查找目标值 | left        | 先判断左右区间有序，再判断目标值位于哪个区间         |
+| 查找最小值 | right       | 旋转点一定在无序区间内，用变量min_value持续更新mid值 |
 
 ###### （1）查找目标值
 
@@ -109,8 +109,6 @@ return -1
 ```
 
 ###### （2）查找最小值
-
-思路：（1）比较==中点mid==与==右端点right==     核心是无序区间旋转点（2）持续更新min_value
 
 ```python
 left,right=0,len(nums)-1
@@ -190,7 +188,7 @@ def quicksort(nums, left, right):
    1. 交换堆顶和堆底元素 
    2.  堆长度-1，堆顶执行堆化
 
-- tips:  大小顶堆唯一区别是堆化时比较当前节点 > or <孩子。 
+- tips:  大小顶堆唯一区别是 堆化时`当前节点 >或< 左右孩子`。 
 
 #### 归并排序
 
@@ -198,7 +196,7 @@ def quicksort(nums, left, right):
 # 两个数组合并后的中位数   
 def merge_and_process(nums1, nums2):
     """
-    合并两个有序数组，思路一样 合并两个有序链表
+    合并两个有序数组，类似合并两个有序链表
     """
     i, j = 0, 0
     merged = []
@@ -237,11 +235,12 @@ def merge_and_process(nums1, nums2):
 
    （2）判断当前元素，是否==收缩窗口==
 
-   ​	     固定窗口  窗口已满 `if right-left>= len(子串)`
-
-   ​		 动态窗口  合法区间内满足子串条件  `while left<right and valid==len(need.keys())`
-
-   （3）收缩两步骤  （a）记录结果（b）左边界元素是否更新窗口参数（valid、windows、left）
+   ```python
+   固定窗口: 窗口已满 if right-left>= len(子串)
+   动态窗口: 合法区间内满足子串条件  while left<right and valid==len(need.keys())
+   ```
+   
+   收缩两步骤  （a）记录结果（b）左边界元素是否更新窗口参数（valid、windows、left）
 
 [links](https://labuladong.online/algo/essential-technique/sliding-window-framework/#%E6%BB%91%E5%8A%A8%E7%AA%97%E5%8F%A3%E6%A1%86%E6%9E%B6%E6%A6%82%E8%A7%88)
 
@@ -252,7 +251,7 @@ def merge_and_process(nums1, nums2):
 #### 1. 单调栈3步骤  
 
 1. 明确 当前元素  和 栈顶元素 的`> < =`三种情况
-2. 无论是否出栈，当前元素**下标**==最后必须入栈==
+2. 无论是否出栈，当前元素==下标==最后必须==入栈==
 
 ## 链表
 
@@ -294,7 +293,7 @@ def reverse_linked_list(head):
 时间复杂度为 O(m + n)
 
 ```python
-def merge_two_lists(l1, l2):
+def merge_two_lists(l1, l2): # 归并排序
     # 创建一个虚拟头节点，方便处理合并操作
     dummy = ListNode(0)
     cur_node = dummy  # 用于遍历和构建合并链表的指针
@@ -327,35 +326,32 @@ def merge_two_lists(l1, l2):
 
 #### 递归三步骤
 
-1. 确定递归函数的参数和返回值
-2. 确定终止条件  `node is None`
-3. 确定单层递归的逻辑
+1. 确定参数和返回值
+2. 确定终止条件 
+3. 确定单层递归逻辑
 
 ```python
-class Solution:
-    def preorderTraversal(self, root: TreeNode) -> List[int]:
-        res = []
-        
-        def dfs(node):
-            # 终止条件 当前节点为空
-            if node is None:
-                return   
-            # 前序  中左右
-            res.append(node.val)
-            dfs(node.left)
-            dfs(node.right)
-            
-            # 中序  左中右
-            #dfs(node.left)
-            #res.append(node.val)
-            #dfs(node.right)
-            
-            # 后续  左右中
-            #dfs(node.left)
-            #dfs(node.right)   
-            #res.append(node.val)
-        dfs(root)
-        return res
+res = []
+def dfs(node):
+    # 终止条件 当前节点为空
+    if node is None:
+        return   
+    # 前序  中左右
+    res.append(node.val)
+    dfs(node.left)
+    dfs(node.right)
+
+    # 中序  左中右
+    #dfs(node.left)
+    #res.append(node.val)
+    #dfs(node.right)
+
+    # 后续  左右中
+    #dfs(node.left)
+    #dfs(node.right)   
+    #res.append(node.val)
+dfs(root)
+return res
 ```
 
 ### 2. 广度优先搜索（BFS）
@@ -383,7 +379,7 @@ class Solution:
         while dq: # 1. 遍历每一层
             # 2. 遍历当前层的节点   长度划分出当前层的元素个数，for pop遍历并清空当前层元素
             level = [] 
-            for _ in range(len(dq) ): 
+            for _ in range(len(dq)): 
                 cur_node = dq.popleft() 
                 level.append(cur_node.val)
                 # 3. 装入左右子树
@@ -406,12 +402,12 @@ class Solution:
 2. 确定终止条件 
 3. 单层逻辑   **明确 **横向for遍历什么、递归纵向遍历什么
 
-|      | 局部参数                           | 终止条件                                  | 横向                                                         | 纵向                                               |
-| ---- | ---------------------------------- | ----------------------------------------- | ------------------------------------------------------------ | -------------------------------------------------- |
-| 子集 | startIndex                         | startIndex==len(s) <br />先保存结果再终止 | range(startIndex, len(nums))                                 | backtrack(nums,i+1)                                |
-| 组合 | startIndex                         | len(path)==len(nums)                      | range(startIndex,len(nums))                                  | backtrack(nums,i or i+1) <br />i重复取   i+1不重复 |
-| 分割 | startIndex                         | startIndex==len(s)                        | range(startIndex, len(s)) <br />切出的子串`s[startIndex:i+1]` | backtrack(s,i+1)                                   |
-| 排列 | used  <br />False未访问 True已访问 | len(path)==len(nums)                      | range(len(nums))   ==全遍历==                                | backtrack(nums,==used==)                           |
+|      | 局部参数                           | 终止条件                                  | 横向                                                         | 纵向                                                   |
+| ---- | ---------------------------------- | ----------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------ |
+| 子集 | startIndex                         | startIndex==len(s) <br />先保存结果再终止 | range(startIndex, len(nums))                                 | backtrack(nums,i+1)                                    |
+| 组合 | startIndex                         | len(path)==len(nums)                      | range(startIndex,len(nums))                                  | backtrack(nums,i or i+1) <br />==i重复取==   i+1不重复 |
+| 分割 | startIndex                         | startIndex==len(s)                        | range(startIndex, len(s)) <br />切出的子串`s[startIndex:i+1]` | backtrack(s,i+1)                                       |
+| 排列 | used  <br />False未访问 True已访问 | len(path)==len(nums)                      | range(len(nums))   ==全遍历==                                | backtrack(nums,==used==)                               |
 
 ### 2. 应用
 
@@ -506,7 +502,7 @@ backtrack(nums,used)
 <img src="assets/image-20241211001418031.png" alt="image-20241211001418031" style="zoom:30%;" />
 
 1. 背包容量从==0==开始
-2. 明确3个问题   01背包or完全背包（确定正序or逆序）、组合or排列（确定顺序）、具体问题
+2. 明确3个问题   01背包or完全背包（确定正序or逆序）、组合or排列（确定顺序）、具体子问题
 
 ![image-20250105下午73957568](./assets/image-20250105下午73957568.png)
 
