--- a/解题方法论.md
+++ b/解题方法论.md
@@ -167,7 +167,7 @@ def quicksort(nums, left, right):
 
 1. 堆化（递归）：从当前下标向下全部堆化
 
-   1. 参数和返回值：3个入参  nums数组、length堆长度、i待堆化的下标
+   1. 参数和返回值：3个入参  数组nums、堆长度length、待堆化的下标i
 
    2. 终止条件 （1）当前为叶子节点 （2）当前非叶子节点，但相比左右孩子已是最大值，无需交换
 
@@ -185,7 +185,7 @@ def quicksort(nums, left, right):
 
 3. 出堆：移除k-1个元素，堆顶就是第k大的元素
 
-   1. 交换堆顶和堆底元素 
+   1. 交换堆顶和堆底元素
    2.  堆长度-1，堆顶执行堆化
 
 - tips:  大小顶堆唯一区别是 堆化时`当前节点 >或< 左右孩子`。 
@@ -219,7 +219,7 @@ def merge_and_process(nums1, nums2):
 
 ### 4. 滑动窗口（左闭右开）
 
-#### 1. 解题2步骤
+#### 1. 滑动窗口2步骤
 
 1. 初始化参数 
 
@@ -248,7 +248,7 @@ def merge_and_process(nums1, nums2):
 
 应用：找下一个更大/更小元素
 
-#### 1. 单调栈3步骤  
+#### 1. 单调栈2步骤  
 
 1. 明确 当前元素  和 栈顶元素 的`> < =`三种情况
 2. 无论是否出栈，当前元素==下标==最后必须==入栈==
@@ -331,27 +331,27 @@ def merge_two_lists(l1, l2): # 归并排序
 3. 确定单层递归逻辑
 
 ```python
-res = []
+result = []
 def dfs(node):
     # 终止条件 当前节点为空
     if node is None:
         return   
     # 前序  中左右
-    res.append(node.val)
+    result.append(node.val)
     dfs(node.left)
     dfs(node.right)
 
     # 中序  左中右
     #dfs(node.left)
-    #res.append(node.val)
+    #result.append(node.val)
     #dfs(node.right)
 
     # 后续  左右中
     #dfs(node.left)
     #dfs(node.right)   
-    #res.append(node.val)
+    #result.append(node.val)
 dfs(root)
-return res
+return result
 ```
 
 ### 2. 广度优先搜索（BFS）
@@ -363,12 +363,6 @@ return res
 4. 装入当前层所有节点值
 
 ```python
-# 利用长度法
-# class TreeNode:
-#     def __init__(self, val=0, left=None, right=None):
-#         self.val = val
-#         self.left = left
-#         self.right = right
 class Solution:
     def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
         # 边界条件   空树
@@ -406,7 +400,7 @@ class Solution:
 | ---- | ---------------------------------- | ----------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------ |
 | 子集 | startIndex                         | startIndex==len(s) <br />先保存结果再终止 | range(startIndex, len(nums))                                 | backtrack(nums,i+1)                                    |
 | 组合 | startIndex                         | len(path)==len(nums)                      | range(startIndex,len(nums))                                  | backtrack(nums,i or i+1) <br />==i重复取==   i+1不重复 |
-| 分割 | startIndex                         | startIndex==len(s)                        | range(startIndex, len(s)) <br />切出的子串`s[startIndex:i+1]` | backtrack(s,i+1)                                       |
+| 分割 | startIndex<br />分割线             | startIndex==len(s)                        | range(startIndex, len(s)) <br />切出的子串`s[startIndex:i+1]` | backtrack(s,i+1)                                       |
 | 排列 | used  <br />False未访问 True已访问 | len(path)==len(nums)                      | range(len(nums))   ==全遍历==                                | backtrack(nums,==used==)                               |
 
 ### 2. 应用
