--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -714,7 +714,9 @@ return result
 
 思路：每个元素找右侧的最大值，从右向左构建最大栈
 
-### 2. 跳跃游戏：数组中的每个元素代表你在该位置可以跳跃的最大长度。判断是否能跳到最后一个下标。
+### 2. 跳跃游戏
+
+题目：数组中的每个元素代表你在该位置可以跳跃的最大长度。判断是否能跳到最后一个下标。
 
 思路：关注最大跳跃范围是否到达下标n-1位置
 
@@ -938,38 +940,36 @@ class Solution:
 
 ```python
 # ==============动态规划解法==============
-class Solution:
-    def countSubstrings(self, s: str) -> int:
-        dp = [[False] * len(s) for _ in range(len(s))]
-        result = 0
-        for i in range(len(s)-1, -1, -1): #注意遍历顺序
-            for j in range(i, len(s)):
-                if s[i] == s[j]:
-                    if j - i <= 1: #情况一 和 情况二
-                        result += 1
-                        dp[i][j] = True
-                    elif dp[i+1][j-1]: #情况三
-                        result += 1
-                        dp[i][j] = True
-        return result
+def longestPalindrome(s) :
+    dp = [[False] * len(s) for _ in range(len(s))]
+    result = 0
+    for i in range(len(s)-1, -1, -1): #注意遍历顺序
+        for j in range(i, len(s)):
+            if s[i] == s[j]:
+                if j - i <= 1: #情况一 和 情况二
+                    result += 1
+                    dp[i][j] = True
+                elif dp[i+1][j-1]: #情况三
+                    result += 1
+                    dp[i][j] = True
+    return result
 
 # ==============双指针解法==============
-class Solution:
-    def longestPalindrome(self, s: str) -> str:
-        # 奇数串  偶数串
-        def expand(s,left,right):
-            # 合法区间内往外拓展 找最长子串
-            while left>=0 and right<len(s) and s[left]==s[right]:
-                left-=1
-                right+=1
-            return s[left+1:right] # 终止时多外扩了一次  故收缩一下
-        
-        long_str=""
-        for i in range(len(s)):
-            odd_str= expand(s,i,i)  # 以 s[i] 为中心的最长回文子串
-            even_str=expand(s,i,i+1) # 以 s[i] 和 s[i+1] 为中心的最长回文子串
-            long_str = max(long_str,odd_str,even_str,key=len)
-        return long_str
+def longestPalindrome(s) :
+    # 奇数串  偶数串
+    def expand(s,left,right):
+        # 合法区间内往外拓展 找最长子串
+        while left>=0 and right<len(s) and s[left]==s[right]:
+            left-=1
+            right+=1
+        return s[left+1:right] # 终止时多外扩了一次  故收缩一下
+
+    long_str=""
+    for i in range(len(s)):
+        odd_str= expand(s,i,i)  # 以 s[i] 为中心的最长回文子串
+        even_str=expand(s,i,i+1) # 以 s[i] 和 s[i+1] 为中心的最长回文子串
+        long_str = max(long_str,odd_str,even_str,key=len)
+    return long_str
 ```
 
 #### 3. 最长公共子序列
