--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -98,39 +98,6 @@ for i in range(1, len(intervals)):
 return result
 ```
 
-
-
-### 5. 最大子数组的和
-
-思路：  
-
-1. 更新当前的前缀和 
-   - 如果之前>0，则对当前有益  更新为prefix+当前值。
-   - 如果之前<0，则对当前有害  重置为当前值
-2. 更新当前的最大值  
-
-```python
-if not nums:
-    return 0
-
-# 初始化前缀和和最大和
-prefix = nums[0]  # 当前子数组的前缀和
-max_sum = nums[0]  # 最大子数组的和
-
-# 从第二个元素开始遍历
-for i in range(1, len(nums)):
-    # 如果前缀和大于0，对当前值有益，更新前缀和
-    # 否则，重置前缀和为当前值
-    prefix = max(nums[i], prefix + nums[i])
-
-    # 更新最大和
-    max_sum = max(max_sum, prefix)
-
-return max_sum
-```
-
-
-
 ### ⭐️7. 三数之和
 
 思路： [links](https://www.programmercarl.com/0015.%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
@@ -166,7 +133,9 @@ for i in range(len(nums)-2): # 必须三个数
 return result
 ```
 
-### 8. 和为 K 的子数组：整数数组 nums 和一个整数 k ，统计和为 k 的子数组的个数 
+### 8. 和为 K 的子数组
+
+题目：整数数组 nums 和一个整数 k ，统计和为 k 的子数组的个数 
 
 思路： 用前缀和+哈希表
 
@@ -174,13 +143,69 @@ return result
 
 - 初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
 
+```python
+ def subarray_sum(nums, k):
+    # 初始化前缀和和计数哈希表
+    prefix_sum = 0
+    count = 0
+    prefix_sum_map = {0: 1}  # 初始前缀和为0的出现次数为1
+    
+    # 遍历数组
+    for num in nums:
+        prefix_sum += num  # 更新当前前缀和
+        
+        # 检查当前前缀和减去 k 的结果是否在哈希表中
+        if prefix_sum - k in prefix_sum_map:
+            count += prefix_sum_map[prefix_sum - k]  # 累加出现的次数
+        # 更新当前前缀和的计数
+				prefix_sum_map[prefix_sum] = prefix_sum_map.get(prefix_sum, 0) + 1
+    return count
+
+# 示例
+nums = [1, 2, 3]
+k = 3
+print(subarray_sum(nums, k))  # 输出：2
+```
+
+
+
 ### 9. 翻转字符串里的单词 
 
+题目：给定一个字符串 s，逐个翻转字符串中的单词。单词之间由空格分隔，翻转后的单词顺序应与原来一致。
+
+​	•	输入：s = "the sky is blue"
+
+​	•	输出："blue is sky the"
+
  思路： 全部翻转，再翻转每个单词
+
+```python
+# 1. 去除首尾空格，并将字符串拆分为单词
+words = s.strip().split()  
+# 2. 反转单词顺序
+words.reverse()
+# 3. 将单词连接成一个字符串，单词之间用空格分隔
+return ' '.join(words)
+```
+
+
 
 ### 10. 移动零：所有 0 移动到数组的末尾
 
 思路：快慢指针，快指针持续走到 满足条件的元素，与慢指针交换。然后同时右走
+
+```python
+def move_zeroes(nums):
+    slow = 0  # 慢指针，指向非零元素的位置
+    for fast in range(len(nums)):
+        if nums[fast] != 0:
+            # 交换快慢指针指向的元素
+            nums[slow], nums[fast] = nums[fast], nums[slow]
+            # 慢指针向前移动
+            slow += 1
+```
+
+
 
 ### 11. 最长连续序列 ：未排序的整数数组 nums ，找出数字连续的最长序列
 
@@ -190,6 +215,35 @@ return result
 
 1. 用set判断是否包含当前元素-1。 跳过非开头
 2. 递增 持续判断是否在集合里
+
+```python
+def longest_consecutive(nums):
+    if not nums:
+        return 0
+    
+    # 将数组转为集合
+    num_set = set(nums)
+    max_length = 0
+    
+    # 遍历数组中的每个数
+    for num in num_set:
+        # 如果 num-1 不在集合中，说明 num 是一个潜在的连续序列的开头
+        if num - 1 not in num_set:
+            current_num = num
+            current_length = 1
+            
+            # 继续向后扩展，判断 num+1, num+2, ...
+            while current_num + 1 in num_set:
+                current_num += 1
+                current_length += 1
+            
+            # 更新最大长度
+            max_length = max(max_length, current_length)
+    
+    return max_length
+```
+
+
 
 ### 12. 缺失的第一个正整数
 
@@ -202,6 +256,28 @@ return result
    -  必须理清 当前下标、当前值、交换下标、交换值。 交换前==下标不得嵌套==
 
 2. 遍历：第一个与下标不匹配的元素即为缺失正整数
+
+```python
+for i in range(len(nums)):
+    while 1<=nums[i]<=len(nums) and nums[i]!=i+1: # 当前值满足交换提哦啊见
+        # 终止条件
+        if nums[i]-1+1==nums[nums[i]-1]: # 即将交换的位置已匹配好
+            break
+        else:
+            # 交换nums[i]   nums[nums[i]-1]
+            a = nums[i]
+            b = nums[nums[i]-1]
+            # 交换不得嵌套
+            nums[i]=b
+            nums[a-1]=a     
+# 遍历
+for i in range(len(nums)):
+    if i+1!=nums[i]:
+        return i+1
+return len(nums)+1
+```
+
+
 
 ### ⭐️13. 接雨水
 
@@ -284,11 +360,41 @@ def spiralOrder(matrix):
 
 思路：矩阵对角线交换+每行翻转
 
+```python
+# 对角线交换
+for i in range(len(matrix)):
+    for j in range(i):
+        matrix[i][j],matrix[j][i]=matrix[j][i],matrix[i][j]
+# 每行逆序
+for i in range(len(matrix)):
+    matrix[i]=matrix[i][::-1] # 逆序
+```
+
+
+
 ## 二分查找
 
 ### 1. 搜索二维矩阵
 
 思路： 坐标映射到一维，进行二分查找
+
+```python
+all_length = len(matrix)*len(matrix[0])
+left,right=0,all_length-1 # 双闭区间
+while left<=right: # 边界也要判断
+    mid= (left+right)//2
+    i=mid//(len(matrix[0]))
+    j=mid%(len(matrix[0]))
+    if matrix[i][j]==target:
+        return True
+    elif matrix[i][j]>target:
+        right=mid-1
+    elif matrix[i][j]<target:
+        left=mid+1
+return False
+```
+
+
 
 ## 排序
 
@@ -352,6 +458,28 @@ print(findKthLargest(nums, k))  # 输出应该是 5
 1. 链表A走A+B路程，链表B走B+A路径。持续比较 两个节点。
 2. 终止条件是两个节点相等，中途相等则相交，都走完则不想交。
 
+```python
+def getIntersectionNode(headA, headB):
+      # A走A+B   B走B+A   持续比较两个链表的节点。 终止条件是相等。
+      # 如果相等时未走完，则相交   走完则不想交
+      cur_A=headA
+      cur_B=headB
+
+      while cur_A!=cur_B:
+          if cur_A:
+              cur_A=cur_A.next
+          else:
+              cur_A=headB
+
+          if cur_B:
+              cur_B=cur_B.next
+          else:
+              cur_B=headA
+      return cur_A
+```
+
+
+
 ### 2. 环形链表判断是否有环？环入口？
 
 ![2024-12-24-2](./assets/2024-12-24-2.png)
@@ -359,21 +487,155 @@ print(findKthLargest(nums, k))  # 输出应该是 5
 1. 快慢指针相遇，则有环。
 2. 相遇时，慢节点回到头节点，快慢指针同步走，再次相遇是入口
 
+```python
+# 链表是否有环
+def hasCycle(head):
+    slow = fast = head
+    while fast and fast.next:
+        slow = slow.next            # 慢指针每次走一步
+        fast = fast.next.next       # 快指针每次走两步
+        if slow == fast:            # 快慢指针相遇，说明有环
+            return True
+    return False                    # 如果快指针到达链表末尾，则没有环
+
+# 找到链表环的入口
+def detectCycle(head):
+    slow = fast = head
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
+        if slow == fast:  # 快慢指针相遇，链表有环
+            # 将慢指针移到链表头，快慢指针同步移动
+            slow = head
+            while slow != fast:
+                slow = slow.next
+                fast = fast.next
+            return slow  # 相遇点即为环的入口
+    
+    return None  # 如果链表没有环，返回 None
+```
+
+
+
 ### 3. 回文链表
 
 思路：快慢指针找中点，翻转后半 再同时遍历两个链表
+
+```python
+def isPalindrome(head):
+    """
+    判断链表是否为回文链表
+    :param head: ListNode 链表头节点
+    :return: bool 是否是回文链表
+    """
+    if not head or not head.next:
+        return True  # 空链表或单节点链表是回文链表
+    
+    # 快慢指针找中点
+    slow = fast = head
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
+    
+    # 翻转后半部分链表
+    prev = None
+    while slow:
+        next_node = slow.next
+        slow.next = prev
+        prev = slow
+        slow = next_node
+    
+    # 比较前半部分和翻转后的后半部分
+    first_half = head
+    second_half = prev
+    while second_half:  # 只需要比较后半部分
+        if first_half.val != second_half.val:
+            return False
+        first_half = first_half.next
+        second_half = second_half.next
+    
+    return True
+```
+
+
 
 ### 4. 翻转链表
 
 思路：3个指针  新链表表头new_node、旧链表当前节点cur_node、旧链表下一个节点next_node
 
+```python
+def reverseList(head):
+    new_node=None
+    cur_node=head
+    while cur_node:
+        next_node=cur_node.next
+        cur_node.next=new_node
+        new_node=cur_node
+        cur_node=next_node
+    return new_node
+```
+
+
+
 ### 5. 链表模拟两数之和 
 
 思路：少的链表高位为0、考虑进位
 
+```python
+def addTwoNumbers(l1, l2):
+    # 创建一个虚拟头节点，简化边界条件处理
+    dummy = ListNode()
+    current = dummy  # 用于遍历新链表
+    carry = 0  # 进位，初始为0
+
+    # 遍历链表，直到两个链表都为空且没有进位
+    while l1 or l2 or carry:
+        # 获取当前位的值，如果链表已经遍历完，则用0代替
+        val1 = l1.val if l1 else 0
+        val2 = l2.val if l2 else 0
+
+        # 计算当前位的和，以及新的进位
+        total = val1 + val2 + carry
+        carry = total // 10  # 进位
+        current.next = ListNode(total % 10)  # 当前位的数字
+
+        # 移动到下一个节点
+        current = current.next
+
+        # 移动l1和l2指针
+        if l1: l1 = l1.next
+        if l2: l2 = l2.next
+
+    return dummy.next  # 返回虚拟头节点的下一个节点
+```
+
+
+
 ### 6. 删除倒数第N个节点
 
 思路：虚拟头结点+快慢指针
+
+```python
+def removeNthFromEnd(head, n):
+    # 创建虚拟头节点
+    dummy = ListNode(0)
+    dummy.next = head
+    fast = slow = dummy  # 快慢指针初始化为虚拟头节点
+
+    # 快指针先走n步
+    for _ in range(n):
+        fast = fast.next
+
+    # 快慢指针一起走，直到快指针到达链表的末尾
+    while fast.next:
+        fast = fast.next
+        slow = slow.next
+
+    # 删除倒数第N个节点
+    slow.next = slow.next.next
+
+    return dummy.next  # 返回删除后的链表头节点
+```
 
 
 
@@ -552,7 +814,54 @@ def minWindow(self, s: str, t: str) -> str:
 
 思路：==中序遍历==成数组，再判断是否递增
 
-### 2. 从前序和中序构建二叉树
+```python
+in_order = []
+def in_order_traversal(node):
+    # 终止条件
+    if node is None: 
+        return
+    in_order_traversal(node.left)
+    in_order.append(node.val)
+    in_order_traversal(node.right)
+
+# 1. 中序遍历
+in_order_traversal(root)
+
+# 2. 判断是否严格递增
+for i in range(1, len(in_order)):
+    if in_order[i] <= in_order[i-1]:
+        return False
+return True
+```
+
+### 2. 将升序数组转换为高度平衡的二叉搜索树
+
+思路：递归
+
+1. 终止条件：节点为空递归完毕
+2. 单层逻辑：  先中序，再递归左右子树
+
+```python
+def backtrack(nums):
+    # 终止条件  数组为空，返回None
+    if  nums is None:
+        return None
+
+    # 找到中间位置，创建根节点
+    mid = len(nums) // 2
+    root = TreeNode(nums[mid])
+    # 递归构建左子树
+    root.left = backtrack(nums[:mid])
+
+    # 递归构建右子树
+    root.right = backtrack(nums[mid+1:])
+    return root
+tree = backtrack(nums)
+```
+
+
+
+### 3. 从前序和中序构建二叉树
 
 思路： 递归不断拆分左右区间，构建左右子树
 
@@ -562,27 +871,212 @@ def minWindow(self, s: str, t: str) -> str:
 2. 终止条件   输入序列长度为空
 3. 单层递归逻辑
    1. 前序第一个节点 将中序拆成左右区间
-   2. 用中序左区间长度 将前序业拆成左右区间
+   2. 用中序左区间长度 将前序也拆成左右区间
    3. 得到前序 中序的左右区间后递归即可
 
 ```python
-def buildTree(preorder, inorder):
-  	# 终止条件
-    if not preorder or not inorder:
+def buildTree(pre_order, in_order):
+  	# 终止条件  遍历完
+    if not pre_order or not in_order:
         return None
 
     # 前序遍历的第一个元素是当前树的根节点
-    root_val = preorder[0]
+    root_val = pre_order[0]
     root = TreeNode(root_val) #新树节点
 
-    # 找到根节点在中序遍历中的索引
-    mid_idx = inorder.index(root_val)
+    # 找到根节点在中序遍历中的下标  即为左子树节点数量
+    mid_idx = in_order.index(root_val)
 
     # 递归构建左子树和右子树
-    root.left = buildTree(preorder[1:mid_idx + 1], inorder[:mid_idx])
-    root.right = buildTree(preorder[mid_idx + 1:], inorder[mid_idx + 1:])
-
+    root.left = buildTree(pre_order[1:mid_idx + 1], in_order[:mid_idx])
+    root.right = buildTree(pre_order[mid_idx + 1:], in_order[mid_idx + 1:])
     return root
+```
+
+### ⭐️❓4. 二叉树展开为链表
+
+题目：将一个二叉树展开为链表，通常是指将二叉树按 **先序遍历** 的顺序展开成单链表的形式，使得二叉树的每个节点的右指针指向展开后的下一个节点，左指针指向 None。
+
+思路：反向后序遍历  右左中。（1）从右到左进行后序遍历。（2）每次遍历一个节点时，将当前节点的右指针指向之前处理的节点。
+
+```python
+def helper(node, prev):
+    # 终止条件  节点为空
+    if node is None:
+        return prev
+
+    # 先递归处理右子树，再递归处理左子树
+    prev = helper(node.right, prev)
+    prev = helper(node.left, prev)
+
+    # 当前节点的右指针指向 prev
+    node.right = prev
+    node.left = None
+    return node
+helper(root, None)
+```
+
+### ❓5. 二叉树的最近公共祖先
+
+题目描述：给定一个二叉树和树中的两个节点 p 和 q，找到它们的最近公共祖先。最近公共祖先是指节点 p 和 q 在树中最近的一个共同祖先，且满足：一个节点也可以是它自己的祖先。
+
+思路
+
+​	1.	**递归遍历树**：
+
+​	•	如果当前节点是 None，直接返回 None。
+
+​	•	如果当前节点是 p 或 q，直接返回当前节点。
+
+​	•	对当前节点的左右子树分别递归，寻找 p 和 q。
+
+​	2.	**结合左右子树的结果**：
+
+​	•	如果左右子树均找到结果，说明当前节点是最近公共祖先。
+
+​	•	如果只有一侧找到结果，返回找到的节点。
+
+​	•	如果两侧都没找到，返回 None。
+
+```python
+def lowestCommonAncestor(root, p, q):
+    """
+    二叉树的最近公共祖先
+    :param root: TreeNode, 二叉树的根节点
+    :param p: TreeNode, 节点 p
+    :param q: TreeNode, 节点 q
+    """
+    # 终止条件 （1）如果当前节点为空，返回None  （2）如果当前节点是 p 或 q，返回当前节点
+    if not root:
+        return None
+    if root == p or root == q:
+        return root
+    
+    # 在左子树中递归寻找最近公共祖先
+    left = lowestCommonAncestor(root.left, p, q)
+    
+    # 在右子树中递归寻找最近公共祖先
+    right = lowestCommonAncestor(root.right, p, q)
+    
+    # 如果左右子树均不为空，说明当前节点是最近公共祖先
+    if left and right:
+        return root
+    
+    # 如果左子树为空，返回右子树的结果；如果右子树为空，返回左子树的结果
+    return left if left else right
+```
+
+### ❓6. 二叉树中的最大路径和
+
+**问题描述**
+
+给定一个**非空**二叉树，每个节点包含一个整数值。找到**二叉树中的最大路径和**，路径的定义是从任意节点开始，到任意节点结束，并且路径必须连续。
+
+思路：
+
+​	1.	**路径的组成**：
+
+​	•	路径可以包含从当前节点向下的左子树、右子树，甚至不包括子树。
+
+​	•	最大路径和的计算需要考虑当前节点的值和左右子树的贡献。
+
+​	2.	**动态规划 + 后序遍历**：
+
+​	•	对每个节点，计算从该节点出发的**单边最大路径和**（只能选择左子树或右子树，不可同时选择）。
+
+​	•	同时计算**经过该节点的完整路径的最大和**，它等于当前节点值加上左右子树的贡献。
+
+​	•	使用全局变量记录全局的最大路径和。
+
+​	3.	**递归函数定义**：
+
+​	•	函数返回单边最大路径和。
+
+​	•	更新全局变量，记录以当前节点为中心的最大路径和。
+
+```python
+global_max = float('-inf')
+def helper(node):
+    """
+    递归函数，计算单边最大路径和
+    :param node: 当前节点
+    :return: 从当前节点出发的单边最大路径和
+    """
+    nonlocal global_max
+    if not node:
+        return 0
+
+    # 计算左右子树的单边最大路径和，负值直接取 0（相当于不选）
+    left_max = max(helper(node.left), 0)
+    right_max = max(helper(node.right), 0)
+
+    # 更新全局最大路径和，经过当前节点的完整路径和
+    global_max = max(global_max, node.val + left_max + right_max)
+
+    # 返回从当前节点出发的单边最大路径和
+    return node.val + max(left_max, right_max)
+
+helper(root)
+return global_max
+```
+
+### ❓7. 路径综合III  
+
+**问题描述**
+
+给定一个二叉树和一个目标和 targetSum，找出所有从根节点到叶子节点的路径，路径的节点值之和等于目标值 targetSum。
+
+路径是指从根节点到叶子节点的连续节点组成的序列。
+
+**解题思路**
+
+​	1.	**深度优先搜索（DFS）**：
+
+​	•	从根节点开始遍历，依次访问左右子树，记录当前路径的节点。
+
+​	•	每当访问一个节点时，更新当前路径的和。
+
+​	•	如果当前节点是叶子节点，检查路径和是否等于 targetSum，若是，记录这条路径。
+
+​	2.	**路径的管理**：
+
+​	•	利用递归回溯的方式，在遍历过程中动态管理当前路径。
+
+​	•	使用一个列表来保存当前路径的节点，遍历到叶子节点时检查路径和。
+
+​	3.	**终止条件**：
+
+​	•	如果当前节点是 None，直接返回。
+
+​	•	遍历到叶子节点（即没有左子节点和右子节点的节点），检查当前路径的和是否与 targetSum 相等。
+
+```python
+result = []
+
+def dfs(node, current_path, current_sum):
+    # 如果当前节点为空，返回
+    if not node:
+        return
+
+    # 更新当前路径和
+    current_path.append(node.val)
+    current_sum += node.val
+
+    # 如果是叶子节点且路径和等于目标和，加入结果
+    if  node.left is None and  node.right is None and current_sum == targetSum:
+        result.append(list(current_path))
+
+    # 继续遍历左右子树
+    dfs(node.left, current_path, current_sum)
+    dfs(node.right, current_path, current_sum)
+
+    # 回溯，移除当前节点
+    current_path.pop()
+
+# 从根节点开始深度优先搜索
+dfs(root, [], 0)
+
+return result
 ```
 
 
@@ -806,7 +1300,25 @@ dp[i]= max(dp[i-2]+nums[i], dp[i-1])
    dp_min[i] = min(nums[i], dp_max[i-1]*num[i], dp_min[i-1]*num[i] )
    ```
 
-   
+
+#### 4. 最大子数组的和
+
+- 定义：  dp[i] 表示以==第 i 个元素结尾==的最大子数组和。
+- 递推公式  `dp[i]= max(nums[i] , dp[i-1]+nums[i])`
+
+```python
+# 边界条件
+if not nums:
+    return 0
+dp = [0] * len(nums) 
+dp[0] = nums[0]
+# 从第二个元素开始遍历
+for i in range(1, len(nums)):
+    dp[i] = max(nums[i], dp[i-1] + nums[i]) 
+return max(dp)
+```
+
+
 
 ### （二）背包问题
 
@@ -877,6 +1389,58 @@ for i in range(1,len(s)+1):  # 背包容量 1~n
             dp[i]=True
             break
 return dp[-1]
+```
+
+#### 4. 单词拆分2，返回所有有效的拆分方案❓
+
+思路：动态规划+回溯
+
+```python
+def word_break(s, word_dict):
+    """
+    s (str): 输入字符串。
+    word_dict (List[str]): 单词字典。
+    """
+    word_set = set(word_dict)  # 将字典转为集合
+    n = len(s)
+
+    # 动态规划：记录从0到i的字符串是否可以拆分
+    dp = [False] * (n + 1)
+    dp[0] = True
+
+    # 记录每个索引的前驱节点，用于回溯
+    backtrace = [[] for _ in range(n + 1)]  # 存储所有可能到达index的前驱节点
+
+    for i in range(1, n + 1): # 先背包
+        for j in range(i): # 再物品
+            if dp[j] and s[j:i] in word_set:
+                dp[i] = True
+                backtrace[i].append(j)  # 记录所有可能的排列
+
+    # 无法拼成
+    if not dp[-1]:
+        return []
+		
+    # 可以拼成，通过回溯重建所有可能的拆分路径
+  	# •	递归：逐层从后向前构造可能的路径。
+		# •	组合：通过前驱节点的递归结果，生成所有可能的路径。
+		# •	终止：当到达起点时，返回空字符串作为拼接的基础。
+    def construct_path(index):
+        # 终止条件  回溯到下标0，已完成整个路径
+        if index == 0:
+            return [""] #作为后续拼接的起点
+        
+        sentences = [] # 用于存储当前索引的所有可能的拆分路径
+        for prev_index in backtrace[index]: # 遍历所有可能的前驱节点 尝试所有可能的拆分路径
+            sub_sentences = construct_path(prev_index) # 对前驱节点递归回溯 获取从起点到 prev_index 的所有可能拆分路径
+            for sub in sub_sentences: # 构造当前路径的完整句子
+                if sub: # 如果前部分非空，添加空格
+                    sentences.append(sub + " " + s[prev_index:index])
+                else:  # 如果前部分为空，直接添加当前子字符串
+                    sentences.append(s[prev_index:index])
+        return sentences
+
+    return construct_path(n) # 从结尾往前回溯
 ```
 
 ### （三）子序列问题
