柱状图中最大的矩形

--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -35,7 +35,9 @@ def rotate_array(nums, k):
 
 
 
-### 3. 划分字母区间：字符串划分为尽可能多的片段，同一字母只能出现在一个片段中
+### 3. 划分字母区间
+
+题目：字符串划分为尽可能多的片段，同一字母只能出现在一个片段中
 
 思路：
 
@@ -65,7 +67,9 @@ def partitionLabels(s: str):
     return result
 ```
 
-### 4. 合并区间:  合并所有重叠的区间，并返回不重叠的区间数组
+### 4. 合并区间
+
+题目：合并所有重叠的区间，并返回不重叠的区间数组
 
 思路：
 
@@ -207,7 +211,9 @@ def move_zeroes(nums):
 
 
 
-### 11. 最长连续序列 ：未排序的整数数组 nums ，找出数字连续的最长序列
+### 11. 最长连续序列
+
+题目：未排序的整数数组 nums ，找出数字连续的最长序列
 
 （不要求序列元素在原数组中连续）      
 
@@ -701,27 +707,32 @@ return result
 
 
 
-#### 3. 柱状图中最大的矩形❓
+#### ⭐️3. 柱状图中最大的矩形
 
 [视频讲解](https://www.bilibili.com/video/BV1Ns4y1o7uB?buvid=ZB4C53B2BBD061C34F8EB053DCC8271B5A7F&from_spmid=main.space-contribution.0.0&is_story_h5=false&mid=vFwLKO%2BwKIe1OV8Bmn8djA%3D%3D&plat_id=114&share_from=ugc&share_medium=iphone&share_plat=ios&share_session_id=63D630E1-0B89-43AD-9F25-8DCA15FA1DDB&share_source=WEIXIN&share_tag=s_i&timestamp=1735483510&unique_k=DGVdx3b&up_id=525438321&vd_source=867a12dbe5f2199cb2f7283321debf90)
 
-思路：每个元素找到其前后最近的更小位置
+1. 单调栈快速找到每个柱子左右两侧第一个小于它的柱子位置
+2. 利用这些位置计算每个柱子可以作为矩形高度的最大宽度
 
 ```python
 def largestRectangleArea(heights):
-    # 在柱子高度前后添加哨兵 0,防止极端情况无法计算
-    heights = [0] + heights + [0] 
-    stack = []  # 单调栈存储柱子的索引
-    max_area = 0  # 最大矩形面积
+    # 添加哨兵元素，避免处理边界情况
+    heights = [0] + heights + [0]
+    max_area = 0
+    stack = []  # 单调栈，存储索引
 
-    # 遍历所有柱子
     for i in range(len(heights)):
-        # 当前元素小于栈顶元素时，计算矩形面积
-        while stack and heights[i] < heights[stack[-1]]:
-            h = heights[stack.pop()] # 弹出栈顶元素索引
-            width = i - stack[-1] - 1  # 矩形宽度为两栈顶索引的差值减 1
-            max_area = max(max_area, h * width)
-        stack.append(i)  # 当前柱子索引入栈
+        
+        if len(stack) == 0: #栈为空，当前元素直接入栈
+            stack.append(i)
+        elif heights[i] >= heights[stack[-1]]:  #当前元素 >= 栈顶元素，入栈
+            stack.append(i)
+        else:  # 当前元素 < 栈顶元素，弹栈并计算面积
+            while stack and heights[i] < heights[stack[-1]]:
+                height = heights[stack.pop()]  # 矩形的高度
+                width = i - stack[-1] - 1  # 矩形的宽度
+                max_area = max(max_area, height * width)
+            stack.append(i)  # 弹栈后当前元素仍需入栈
     return max_area
 ```
 
@@ -1322,9 +1333,9 @@ return max(dp)
 
 ### （二）背包问题
 
-#### ⭐️1. 完全平方数（完全背包+组合问题+最少物品数）
+#### ⭐️1. 完全平方数
 
-背包容量是n， 物品是i  取值范围是0~√n
+背包容量是n， 物品是i  取值范围是0~√n    完全背包+组合问题+最少物品数
 
 1. dp定义：dp[i] 和为i的最少数量
 2. 递推公式  `dp[j]=min(dp[j-i²], dp[j])`    i取值范围`1~√n`
@@ -1340,11 +1351,11 @@ for i in range(int(n**0.5) + 1):  # 先物品 根号n
 return dp[n]
 ```
 
-#### 2. 分割等和子集（01背包+组合问题+刚好装满）
+#### 2. 分割等和子集
 
 题目：数组分割成两个子集，使得两个子集的元素和相等 
 
-思路： 找到集合里能够出现 `sum/2` 的子集总和。01背包 + 组合问题
+思路： 01背包+组合问题+刚好装满    找到集合里能够出现 `sum/2` 的子集总和。01背包 + 组合问题
 
 - dp定义：dp[i] 用nums数组的元素组合，使得恰好等于容量i   False装不成  True正好装满
 - 递推公式  dp[i] 当背包容量大于物品j的容量nums[j]时  验证dp[i] or dp[i-nums[j]]
@@ -1364,9 +1375,9 @@ for i in range(len(nums)): # 先物品  i下标0~n-1
 return dp[target]
 ```
 
-#### 3. 单词拆分（完全背包+排列问题+刚好拼成）
+#### 3. 单词拆分
 
-[Links](https://www.programmercarl.com/0139.%E5%8D%95%E8%AF%8D%E6%8B%86%E5%88%86.html)  单词列表是否能拼出字符串（完全背包）
+[Links](https://www.programmercarl.com/0139.%E5%8D%95%E8%AF%8D%E6%8B%86%E5%88%86.html)  单词列表是否能拼出字符串    完全背包+排列问题+刚好拼成
 
 1. 定义  dp[i] 字符串前i个元素（下标从0~i-1）能否拼出， False拼不出 True能拼出。0表示空，下标对应元素s[i-1] 
 
@@ -1579,8 +1590,6 @@ class Solution:
 #### 4. 最长连续递增序列
 
 [links](https://www.programmercarl.com/0674.%E6%9C%80%E9%95%BF%E8%BF%9E%E7%BB%AD%E9%80%92%E5%A2%9E%E5%BA%8F%E5%88%97.html)  整数数组中找出最长严格递增子序列的长度
-
-[Links](https://www.programmercarl.com/0300.%E6%9C%80%E9%95%BF%E4%B8%8A%E5%8D%87%E5%AD%90%E5%BA%8F%E5%88%97.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
 1. dp定义: dp[i]表示以==第i个元素结尾==的最长递增子序列的长度。 i取值0~n-1，对应元素nums[i]
 2. 递推公式：dp[i]依赖  `nums[i]>nums[j]`时`max(dp[i],dp[j]+1)`    j取值0~i-1
