--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -19,7 +19,7 @@
 def rotate_array(nums, k):
     # 1. 确定真实轮转步数
     n = len(nums)
-    k %= n  # 优化 k，防止多余的轮转
+    k = k%n  # 优化 k，防止多余的轮转
 
     # 2. 定义一个翻转函数
     def reverse(arr, start, end):
@@ -95,7 +95,7 @@ for i in range(1, len(intervals)):
     cur_left, cur_right = intervals[i]  # 当前区间
 
     # 判断是否重叠
-    if cur_left <= pre_right:  # 有重叠
+    if pre_right>=cur_left:  # 有重叠
         result[-1] = [pre_left, max(pre_right, cur_right)]  # 合并区间
     else:  # 没有重叠
         result.append([cur_left, cur_right])  # 直接加入当前区间
@@ -143,26 +143,28 @@ return result
 
 思路： 用前缀和+哈希表
 
-- 哈希表{前缀和：出现次数}，如果 `当前前缀和−k的区间和j` 在哈希表，则总次数 累加上`map[j]`的值。
+- 哈希表{前缀和：出现次数}
 
 - 初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
+
+- `prefix[右]- 区间和k = prefix[左]`，则`prefix[左]`次数满足条件
 
 ```python
  def subarray_sum(nums, k):
     # 初始化前缀和和计数哈希表
     prefix_sum = 0
     count = 0
-    prefix_sum_map = {0: 1}  # 初始前缀和为0的出现次数为1
+    prefix_map = {0:1}  # 初始前缀和为0的出现次数为1
     
     # 遍历数组
     for num in nums:
         prefix_sum += num  # 更新当前前缀和
         
-        # 检查当前前缀和减去 k 的结果是否在哈希表中
-        if prefix_sum - k in prefix_sum_map:
-            count += prefix_sum_map[prefix_sum - k]  # 累加出现的次数
-        # 更新当前前缀和的计数
-				prefix_sum_map[prefix_sum] = prefix_sum_map.get(prefix_sum, 0) + 1
+        # 如果存在 prefix_sum - k，则说明有子数组和为 k
+        if prefix_sum - k in prefix_sum_map.keys():
+            count += prefix_map[prefix_sum - k]  # 累加出现的次数
+        # 每步都更新
+				prefix_map[prefix_sum] = prefix_map.get(prefix_sum, 0) + 1
     return count
 
 # 示例
@@ -219,8 +221,8 @@ def move_zeroes(nums):
 
 思路：每个数判断是否为连续序列的开头。
 
-1. 用set判断是否包含当前元素-1。 跳过非开头
-2. 递增 持续判断是否在集合里
+1. 跳过非开头：用set判断是否包含当前元素-1。 
+2. 判断递增：持续判断是否在集合里
 
 ```python
 def longest_consecutive(nums):
@@ -400,8 +402,6 @@ while left<=right: # 边界也要判断
 return False
 ```
 
-
-
 ## 排序
 
 ### 1. 查找数组第K大的元素
@@ -418,22 +418,21 @@ def findKthLargest(nums, k):
             return 
 	
         # 合理区间内最大值下标  判断是否需要交换
-        largest=i
-        if left<length and nums[largest]<nums[left]:  
-            largest=left
-        if right<length and nums[largest]<nums[right]:
-            largest=right
-        if largest==i: 
+        max_index=i
+        if left<length and nums[max_index]<nums[left]:  
+            max_index=left
+        if right<length and nums[max_index]<nums[right]:
+            max_index=right
+        if max_index==i: 
             return
 
         #  单层递归逻辑  交换并向下持续堆化
-        nums[i],nums[largest]=nums[largest],nums[i]
-        max_heap(nums,length,largest)
+        nums[i],nums[max_index]=nums[max_index],nums[i]
+        max_heap(nums,length,max_index)
 
     # 2. 建堆：从最后一个非叶子节点开始到根节点，构建最大堆
     def build_max_heap(nums):
-        length=len(nums)
-        for i in range(length//2-1,-1,-1): # 最后一个非叶子节点 --> 根节点
+        for i in range(len(nums)//2-1,-1,-1): # 最后一个非叶子节点 --> 根节点
             max_heap(nums,length,i)
     build_max_heap(nums)
 
@@ -471,7 +470,7 @@ def getIntersectionNode(headA, headB):
       cur_A=headA
       cur_B=headB
 
-      while cur_A!=cur_B:
+      while cur_A!=cur_B: # 相同节点 或都为None
           if cur_A:
               cur_A=cur_A.next
           else:
@@ -521,51 +520,7 @@ def detectCycle(head):
     return None  # 如果链表没有环，返回 None
 ```
 
-
-
-### 3. 回文链表
-
-思路：快慢指针找中点，翻转后半 再同时遍历两个链表
-
-```python
-def isPalindrome(head):
-    """
-    判断链表是否为回文链表
-    :param head: ListNode 链表头节点
-    :return: bool 是否是回文链表
-    """
-    if not head or not head.next:
-        return True  # 空链表或单节点链表是回文链表
-    
-    # 快慢指针找中点
-    slow = fast = head
-    while fast and fast.next:
-        slow = slow.next
-        fast = fast.next.next
-    
-    # 翻转后半部分链表
-    prev = None
-    while slow:
-        next_node = slow.next
-        slow.next = prev
-        prev = slow
-        slow = next_node
-    
-    # 比较前半部分和翻转后的后半部分
-    first_half = head
-    second_half = prev
-    while second_half:  # 只需要比较后半部分
-        if first_half.val != second_half.val:
-            return False
-        first_half = first_half.next
-        second_half = second_half.next
-    
-    return True
-```
-
-
-
-### 4. 翻转链表
+### 3. 翻转链表
 
 思路：3个指针  新链表表头new_node、旧链表当前节点cur_node、旧链表下一个节点next_node
 
@@ -581,9 +536,45 @@ def reverseList(head):
     return new_node
 ```
 
+### 4. 回文链表
+
+思路：快慢指针找中点，翻转后半 再同时遍历两个链表
+
+```python
+def isPalindrome(head):
+    if not head or not head.next:
+        return True  # 空链表或单节点链表是回文链表
+    
+    # 快慢指针找中点
+    slow = fast = head
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
+    
+    # 翻转后半部分链表
+    new = None
+    while slow:
+        next_node = slow.next
+        slow.next = new
+        new = slow
+        slow = next_node
+    
+    # 比较前半部分和翻转后的后半部分
+    left_half = head
+    right_half = new
+    while right_half:  # 只需要比较后半部分
+        if left_half.val != right_half.val:
+            return False
+        left_half = left_half.next
+        right_half = right_half.next
+    return True
+```
 
 
-### 5. 链表模拟两数之和 
+
+
+
+### ❓5. 链表模拟两数之和 
 
 思路：少的链表高位为0、考虑进位
 
@@ -690,9 +681,9 @@ return cur_strr
 #### 2. 每日温度
 
 ```python
-stack=[0]
+stack=[0] # 先塞入第1天下标
 result=[0]*len(temperatures)
-for i in range(1,len(temperatures)): 
+for i in range(1,len(temperatures)):  # 从第2天开始遍历
     # 当前元素  > 栈顶元素
     if temperatures[i]>temperatures[stack[-1]]:
         while len(stack)>0 and temperatures[i]>temperatures[stack[-1]]:
@@ -711,28 +702,28 @@ return result
 
 [视频讲解](https://www.bilibili.com/video/BV1Ns4y1o7uB?buvid=ZB4C53B2BBD061C34F8EB053DCC8271B5A7F&from_spmid=main.space-contribution.0.0&is_story_h5=false&mid=vFwLKO%2BwKIe1OV8Bmn8djA%3D%3D&plat_id=114&share_from=ugc&share_medium=iphone&share_plat=ios&share_session_id=63D630E1-0B89-43AD-9F25-8DCA15FA1DDB&share_source=WEIXIN&share_tag=s_i&timestamp=1735483510&unique_k=DGVdx3b&up_id=525438321&vd_source=867a12dbe5f2199cb2f7283321debf90)
 
-1. 单调栈快速找到每个柱子左右两侧第一个小于它的柱子位置
-2. 利用这些位置计算每个柱子可以作为矩形高度的最大宽度
+1. 单调栈：找到每个柱子左右两侧第一个小于它的位置。 （1）前后哨兵（2）存储下标值
+2. 面积= height  * （右边第一个小的下标值  -  左边第一个小于的下标值 -1 ）
 
 ```python
 def largestRectangleArea(heights):
     # 添加哨兵元素，避免处理边界情况
     heights = [0] + heights + [0]
     max_area = 0
-    stack = []  # 单调栈，存储索引
+    stack = []  # 单调栈，存储下标
 
     for i in range(len(heights)):
         
-        if len(stack) == 0: #栈为空，当前元素直接入栈
+        if len(stack) == 0: # 栈为空，当前元素直接入栈
             stack.append(i)
         elif heights[i] >= heights[stack[-1]]:  #当前元素 >= 栈顶元素，入栈
             stack.append(i)
-        else:  # 当前元素 < 栈顶元素，弹栈并计算面积
-            while stack and heights[i] < heights[stack[-1]]:
+        elif heights[i] < stack[-1]:  # 当前元素 < 栈顶元素，持续出栈弹栈并计算面积
+            while len(stack)>0 and heights[i] < heights[stack[-1]]:
                 height = heights[stack.pop()]  # 矩形的高度
                 width = i - stack[-1] - 1  # 矩形的宽度
                 max_area = max(max_area, height * width)
-            stack.append(i)  # 弹栈后当前元素仍需入栈
+            stack.append(i)  # 当前元素入栈
     return max_area
 ```
 
@@ -840,17 +831,17 @@ in_order_traversal(root)
 
 # 2. 判断是否严格递增
 for i in range(1, len(in_order)):
-    if in_order[i] <= in_order[i-1]:
+    if in_order[i-1] >= in_order[i]:
         return False
 return True
 ```
 
-### 2. 将升序数组转换为高度平衡的二叉搜索树
+### 2. 将升序数组构建高度平衡的二叉搜索树
 
 思路：递归
 
 1. 终止条件：节点为空递归完毕
-2. 单层逻辑：  先中序，再递归左右子树
+2. 单层逻辑：中序，  先中间位置构建根节点，再递归构建左右子树
 
 ```python
 def backtrack(nums):
@@ -858,19 +849,14 @@ def backtrack(nums):
     if  nums is None:
         return None
 
-    # 找到中间位置，创建根节点
+    # 单层逻辑  找到中间位置，创建根节点
     mid = len(nums) // 2
     root = TreeNode(nums[mid])
-    # 递归构建左子树
-    root.left = backtrack(nums[:mid])
-
-    # 递归构建右子树
-    root.right = backtrack(nums[mid+1:])
+    root.left = backtrack(nums[:mid])  # 递归构建左子树
+    root.right = backtrack(nums[mid+1:]) # 递归构建右子树
     return root
 tree = backtrack(nums)
 ```
-
-
 
 ### 3. 从前序和中序构建二叉树
 
@@ -1104,30 +1090,27 @@ return result
 
 ```python
 # 岛屿数量
-class Solution:
-    def numIslands(self, grid: List[List[str]]) -> int:
-        res=0 # 岛屿数量初始化为0
-       
-        # 遍历grid
-        for i in range(len(grid)):
-            for j in range(len(grid[0])):  
-                if grid[i][j]=="1": # 发现岛屿
-                    res+=1 # 岛屿数+1
-                    self.dfs(grid,i,j) # 将岛屿周围淹掉
-        return res
-    def dfs(self,grid,i,j):
+def numIslands(self, grid):
+  	def dfs(grid,i,j):
         # 递归终止条件 （1）上下左右四边越界 （2）当前已是海水
         if i<0 or j<0 or i>=len(grid) or j>=len(grid[0]):
             return 
         if grid[i][j]=="0": 
             return 
-
-        
         grid[i][j]="0" # 淹没当前位置，再递归淹没淹没上下左右
         self.dfs(grid,i-1,j)
         self.dfs(grid,i+1,j)
         self.dfs(grid,i,j-1)
         self.dfs(grid,i,j+1)
+    
+    
+    res=0  # 岛屿数量初始化为0
+    for i in range(len(grid)):# 遍历grid
+        for j in range(len(grid[0])):  
+            if grid[i][j]=="1": # 发现岛屿
+                res+=1 # 岛屿数+1
+                dfs(grid,i,j) # 将岛屿周围淹掉
+    return res
 ```
 
 ### 2. 腐烂的橘子
@@ -1140,42 +1123,42 @@ class Solution:
 
 ```python
 # 腐烂橘子
-class Solution:
-    def orangesRotting(self, grid: List[List[int]]) -> int:
-        from collections import deque
-        deq = deque()  # 保存腐烂橘子
-        fresh_nums = 0  # 新鲜橘子的数量
 
-        # 遍历整个网格，初始化腐烂橘子的坐标并统计新鲜橘子的数量
-        for i in range(len(grid)):
-            for j in range(len(grid[0])):
-                if grid[i][j] == 1:
-                    fresh_nums += 1  # 统计新鲜橘子
-                elif grid[i][j] == 2:
-                    deq.append((i, j))  # 添加腐烂橘子的位置
-        
-        # 如果没有新鲜橘子，直接返回0
-        if fresh_nums == 0:
-            return 0
-        time = 0  # 耗时
-        direct = [(-1, 0), (1, 0), (0, -1), (0, 1)]  # 上下左右四个方向
-        while deq: # 开始第一波腐烂
-            for _ in range(len(deq)):
-                x, y = deq.popleft()  # 当前腐烂橘子的位置
-                # 尝试上下左右传播腐烂
-                for dx, dy in direct:
-                    nx, ny = x + dx, y + dy
-                    # 判断新位置处于合法区间，且是否为新鲜橘子
-                    if 0 <= nx < len(grid) and 0 <= ny < len(grid[0]) and grid[nx][ny] == 1:
-                        grid[nx][ny] = 2  # 1.将新鲜橘子腐烂
-                        fresh_nums -= 1  # 2.新鲜橘子数量减少
-                        deq.append((nx, ny))  # 3.将新腐烂的橘子加入第二波队列
-            time += 1  # 第一波传染完毕，次数+1
+def orangesRotting(self, grid: List[List[int]]) -> int:
+    from collections import deque
+    deq = deque()  # 保存腐烂橘子
+    fresh_nums = 0  # 新鲜橘子的数量
 
-				if fresh_nums == 0:
-          	return time-1  #最后一次传播是多余的，所以-1
-        else:
-          	return -1  # 如果还有新鲜橘子，返回-1
+    # 遍历整个网格，初始化腐烂橘子的坐标并统计新鲜橘子的数量
+    for i in range(len(grid)):
+        for j in range(len(grid[0])):
+            if grid[i][j] == 1:
+                fresh_nums += 1  # 统计新鲜橘子
+            elif grid[i][j] == 2:
+                deq.append((i, j))  # 添加腐烂橘子的位置
+
+    # 如果没有新鲜橘子，直接返回0
+    if fresh_nums == 0:
+        return 0
+    time = 0  # 耗时
+    direct = [(-1, 0), (1, 0), (0, -1), (0, 1)]  # 上下左右四个方向
+    while deq: # 开始第一波腐烂
+        for _ in range(len(deq)):
+            x, y = deq.popleft()  # 当前腐烂橘子的位置
+            # 尝试上下左右传播腐烂
+            for dx, dy in direct:
+                nx, ny = x + dx, y + dy
+                # 判断新位置处于合法区间，且是否为新鲜橘子
+                if 0 <= nx < len(grid) and 0 <= ny < len(grid[0]) and grid[nx][ny] == 1:
+                    grid[nx][ny] = 2  # 1.将新鲜橘子腐烂
+                    fresh_nums -= 1  # 2.新鲜橘子数量减少
+                    deq.append((nx, ny))  # 3.将新腐烂的橘子加入第二波队列
+        time += 1  # 第一波传染完毕，次数+1
+
+    if fresh_nums == 0:
+        return time 
+    else:
+        return -1  # 如果还有新鲜橘子，返回-1
 ```
 
 
@@ -1230,49 +1213,47 @@ return result
 
 ```python
 def canJump(nums):
-    max_reach = 0  # 最远覆盖的下标
+    max_index = 0  # 最远覆盖的下标
     for i in range(len(nums)):
-        # 终止条件  如果当前下标已经无法到达
-        if i > max_reach:
+        # 终止条件 是否已越界
+        if i > max_index:
             return False       
-        max_reach = max(max_reach, i + nums[i]) # 每步更新最远范围 
-        # 如果已经可以到达最后一个位置，返回 True
-        if max_reach >= len(nums)-1:
+        # 更新最大下标并判断是否能到达
+        max_index = max(max_index, i + nums[i]) 
+        if max_index >= len(nums)-1:
             return True
-    # 遍历结束后依然没能到达最后一个下标
-    return False
+    return False 
 ```
 
 ### 3. 跳跃游戏II：返回最小跳跃次数
 
 思路：最少步数走最远范围    
 
-1. cur_range    当前能走的最远下标
-2. next_range   在cur_range范围内，每走一步都更新最远范围
-3. step  记录最小步数。一切以i为准,判断是否走到头、再是否到达目的地。最后的步数就是最少步数
+1. cur_index   当前最远到达的下标
+2. next_index   在cur_index范围内，每走一步都更新 下次最远到达的下标
+3. step  记录最小步数
 
 ```python
-def jump(nums):
-    n = len(nums)
-    if n <= 1:
+def jump(self, nums: List[int]) -> int:
+    if len(nums) <= 1:
         return 0  # 只有一个元素时，不需要跳跃
-
-    cur_range = 0  # 当前能到达的最远下标
-    next_range = 0  # 下一步可以到达的最远下标
-    steps = 0  # 步数
-    
-    for i in range(n):
-        next_range = max(next_range, i + nums[i]) # 更新下一步的最远范围
-        
-        # 如果遍历到当前能跳跃的最远位置
-        if i == cur_range:
-            steps += 1  # 需要跳跃一次
-            cur_range = next_range  # 更新当前能跳跃的最远位置
-            
-            # 如果当前能跳到或超过最后一个位置，结束
-            if cur_range >= n - 1:
-                return steps  
-    return steps
+    cur_index=0
+    next_index=0
+    step=0
+    for i in range(len(nums)):
+        next_index= max(next_index,i+nums[i]) # 每步都更新下次最远到达的下标
+        if i>cur_index:
+            return -1 # 无法到达
+        elif i>cur_index:
+            continue  # 继续走
+        elif i==cur_index:
+            # 更新下一步
+            cur_index=next_index
+            step+=1
+            # 判断是否已经满足条件
+            if cur_index>=len(nums)-1:
+                return step
+    return step
 ```
 
 
@@ -1402,7 +1383,7 @@ for i in range(1,len(s)+1):  # 背包容量 1~n
 return dp[-1]
 ```
 
-#### 4. 单词拆分2，返回所有有效的拆分方案❓
+#### ❓4. 单词拆分2，返回所有有效的拆分方案
 
 思路：动态规划+回溯
 
